--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
@@ -19,8 +25,16 @@
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss": "^7.0.32",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.6.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.17.2",
+    "stylelint-webpack-plugin": "^2.0.0",
     "terser-webpack-plugin": "^3.0.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
@@ -31,5 +45,10 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "IE > 10",
+    "Firefox > 20"
+  ]
 }
